# bool2dimacs

./: Cargo.toml  README.md
src/: lib.rs  utils.rs
