[package]
name = "bool2cnf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = '*'
env_logger = '0.9.0'
serde = { version = "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
rustlogic = "0.2.0"
cnfgen = "0.2.1"
regex = "1.7.0"
varisat = "0.2.2"

